<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/activity_about_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/about_activity_title_height">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAlignment="gravity"
            android:gravity="center"
            android:text="@string/about_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/text_size_large"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_divider_height"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/gray_lightest"/>
    <RelativeLayout
        android:id="@+id/about_privacy_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:text="@string/privacy_policy_title"
            android:textSize="@dimen/text_size_normal"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_enter"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_divider_height"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/gray_lightest"/>
    <RelativeLayout
        android:id="@+id/about_disclaimer_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:text="@string/disclaimer_title"
            android:textSize="@dimen/text_size_normal"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_enter"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_divider_height"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/gray_lightest"/>
    <RelativeLayout
        android:id="@+id/about_sign_up_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:text="@string/sign_up_agora_title"
            android:textSize="@dimen/text_size_normal"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_enter"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_divider_height"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/gray_lightest"/>
    <RelativeLayout
        android:id="@+id/about_version_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_height"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:textAlignment="gravity"
            android:gravity="center_vertical"
            android:textColor="@android:color/black"
            android:text="@string/version_title"
            android:textSize="@dimen/text_size_normal"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_enter"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_item_divider_height"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:background="@color/gray_lightest"/>

</LinearLayout>